--- a/Botches/skyrim/style.css
+++ b/Botches/skyrim/style.css
@@ -1,11 +1,12 @@
-*, a {
+*{
   font-family: "Courier New";
   background-color: #2c2f33;
   color: #7289da;
   font-size: 13px;
-  }
+}
+
 #soulGems {
-  width: 100vw%;
+  width: 100vw;
   vertical-align: top;
 }
 
