--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body {
   font-size: 1.50em;
 }
+
+#searchBar {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  margin 10px 0;
+ border: 2px solid #eee;
+}
