--- a/style.css
+++ b/style.css
@@ -7,5 +7,6 @@ body {
   box-sizing: border-box;
   padding: 10px;
   margin 10px 0;
- border: 2px solid #eee;
+  border: 2px solid #grey;
+  font-size: 1.75em;
 }
